# fast-code

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/agent/: __init__.py  graph.py  llm.py  message_codec.py  runtime.py  state.py  streaming.py  tools.py
app/api/: chat.py  files.py  health.py  mcp.py  sessions.py  tools.py  workspace_meta.py  ws.py
app/core/: approval.py  chat_context.py  chat_modes.py  coder_subtools.py  conversation.py  permissions.py  prompt_builder.py  query_engine.py  session_manager.py  tool_executor.py  tool_registry.py
app/llm/: __init__.py  router.py
app/models/: __init__.py  config.py  conversations.py  messages.py  sessions.py  tools.py
app/services/: auth.py  store.py
app/tools/: agent.py  base.py  bash.py  coder.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  notebook_edit.py  todo_write.py  web_fetch.py  web_search.py
app/utils/: paths.py  streaming.py  subprocess.py  tokens.py
app/workspace/: __init__.py  audit.py  cli.py  command_graph.py  deferred_init.py  execution_registry.py  history.py  manifest.py  models.py  query_summary.py  runtime.py  setup_context.py  tool_pool.py
mcp_explorer/: http.py  server.py  stdio.py
scripts/: dev.sh
tests/: conftest.py  test_chat.py  test_chat_modes.py  test_coder_tool.py  test_llm_adapters.py  test_mcp.py  test_query_engine.py  test_sessions.py  test_workspace.py
tests/test_tools/: test_bash.py  test_file_ops.py  test_grep_glob.py
(+3 files in other folders)
