[project]
name = "fast-code"
version = "1.0.0"
description = "Open-source AI coding assistant API built on FastAPI with tool execution, streaming chat, and multi-provider LLM support."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ambibuzz" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.42.0",
    "openai>=1.59.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.0",
    "rich>=13.9.0",
    "mcp>=1.0.0",
    "ptyprocess>=0.7.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
fast-code = "app.main:run"
mcp-explorer = "mcp_explorer.stdio:main"
mcp-explorer-http = "mcp_explorer.http:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
